--- a/src/app/free-navigation-mode/free-navigation-mode.component.html
+++ b/src/app/free-navigation-mode/free-navigation-mode.component.html
@@ -60,8 +60,10 @@
   </aw-wizard-completion-step>
 </aw-wizard>
 
-<p>Note that unlike the old <code>FreeNavigationMode</code>, in this example all steps are styled as optional.
-If you absolutely require the same look and feel, you can apply custom CSS:</p>
+<p style="margin: 1em 0;">
+  Note that unlike the old <code>FreeNavigationMode</code>, in this example all steps are styled as optional.
+  If you absolutely require the same look and feel, you can apply custom CSS:
+</p>
 
 <aw-wizard ngClass="custom-styling"
   [awNavigationMode] navigateBackward="allow" navigateForward="allow">
