Add "Wizard with single step" demo page
Discussion: https://github.com/madoar/angular-archwizard/pull/235#discussion_r326919247

--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -157,6 +157,10 @@
               <a>Reversed navigation bar</a>
             </li>
 
+            <li routerLink="/single-step" routerLinkActive="active">
+              <a>Wizard with single step</a>
+            </li>
+
             <li routerLink="/wizard-step-ngfor" routerLinkActive="active">
               <a>Wizard step with *ngFor</a>
             </li>
