--- a/src/app/free-navigation-mode/free-navigation-mode.component.scss
+++ b/src/app/free-navigation-mode/free-navigation-mode.component.scss
@@ -6,12 +6,12 @@
 }
 
 // Adjust the styling of wizard steps so that optional steps look like default ones.
-// (in preudo-code, $wz-colors['_']['optional'] := $wz-colors['_']['default'])
-$wz-colors: map-merge($wz-colors, (
-  '_': map-merge(map-get($wz-colors, '_'), (
-    'optional': map-get(map-get($wz-colors, '_'), 'default')
+// (in preudo-code, $aw-colors['_']['optional'] := $aw-colors['_']['default'])
+$aw-colors: map-merge($aw-colors, (
+  '_': map-merge(map-get($aw-colors, '_'), (
+    'optional': map-get(map-get($aw-colors, '_'), 'default')
   ))
 )) !global;
 aw-wizard.custom-styling {
-  @include wz-define-styles();
+  @include aw-define-styles();
 }
