- prepare for the next development iteration

--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -169,7 +169,7 @@
         <router-outlet></router-outlet>
       </div>
       <footer>
-        This demo uses angular-archwizard version 5.0.0
+        This demo uses angular-archwizard version 6.0.0-develop
       </footer>
     </div>
   </div>
