Split the single-step example into two, one for horizontal and one for vertical layout

--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -160,8 +160,12 @@
               <a>Reversed navigation bar</a>
             </li>
 
-            <li routerLink="/single-step" routerLinkActive="active">
-              <a>Wizard with single step</a>
+            <li routerLink="/single-step/horizontal" routerLinkActive="active">
+              <a>Single step (horizontal layout)</a>
+            </li>
+
+            <li routerLink="/single-step/vertical" routerLinkActive="active">
+              <a>Single step (vertical layout)</a>
             </li>
 
             <li routerLink="/wizard-step-ngfor" routerLinkActive="active">
