Advanced styles customization (#49)
* Update style customization demo on the 'Free navigation mode' page for the 'advanced-styles-customization' branch of angular-archwizard
* Add "Wizard with single step" demo page
   Discussion: https://github.com/madoar/angular-archwizard/pull/235#discussion_r326919247
* Adjust custom styles for wz- prefix renamed into aw-
* 'Custom global SCSS' demo (experimental)
* Split the single-step example into two, one for horizontal and one for vertical layout
* Merge single-step examples into a single group in the sidebar
* Add an elaborate description to the 'Custom SCSS' demo page

--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -120,8 +120,23 @@
               <li routerLink="/custom-css/global" routerLinkActive="active">
                 <a>Custom global CSS</a>
               </li>
+              <li routerLink="/custom-css/global-scss" routerLinkActive="active">
+                <a>Custom global SCSS</a>
+              </li>
               <li routerLink="/custom-css/step" routerLinkActive="active">
                 <a>Custom step CSS</a>
+              </li>
+            </ul>
+
+            <li data-toggle="collapse" data-target="#singleStep" class="collapsed">
+              <a>Single step<span class="arrow"></span></a>
+            </li>
+            <ul class="sub-menu" id="singleStep" [ngClass]="{ 'collapse': !isInFunction('single-step') }">
+              <li routerLink="/single-step/horizontal" routerLinkActive="active">
+                <a>Horizontal layout</a>
+              </li>
+              <li routerLink="/single-step/vertical" routerLinkActive="active">
+                <a>Vertical layout</a>
               </li>
             </ul>
 
