--- a/src/app/free-navigation-mode/free-navigation-mode.component.scss
+++ b/src/app/free-navigation-mode/free-navigation-mode.component.scss
@@ -6,7 +6,12 @@
 }
 
 // Adjust the styling of wizard steps so that optional steps look like default ones.
+// (in pseudo-code, $aw-colors['_']['optional'] := $aw-colors['_']['default'])
+$aw-colors: map-merge($aw-colors, (
+  '_': map-merge(map-get($aw-colors, '_'), (
+    'optional': map-get(map-get($aw-colors, '_'), 'default')
+  ))
+)) !global;
 aw-wizard.custom-styling {
-  $wz-color-optional: $wz-color-default !global;
-  @include wz-define-layout-styles();
+  @include aw-define-styles();
 }
