Add an example for madoar/angular-archwizard#252 - add an example for changing the lines between the step indicators in the navigation bar

--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -154,6 +154,9 @@
           <li routerLink="/custom-css/step" routerLinkActive="active">
             <a>Custom step CSS</a>
           </li>
+          <li routerLink="/custom-css/line" routerLinkActive="active">
+            <a>Custom line CSS</a>
+          </li>
         </ul>
 
         <li data-toggle="collapse" data-target="#singleStep" class="sub-menu-label collapsed"
