--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -213,7 +213,7 @@
       <router-outlet></router-outlet>
     </div>
     <footer>
-      This demo uses angular-archwizard version 6.0.0
+      This demo uses angular-archwizard version 7.0.0-develop
     </footer>
   </div>
 </div>
