--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -8,7 +8,7 @@
 
       <div class="btn-group btn-group-toggle d-block text-center py-md-2 pb-3" data-toggle="buttons">
         <label
-          class="btn btn-secondary"
+          class="btn btn-secondary active"
           (click)="changeDirTo('ltr')">
           <input type="radio" name="options" id="ltr" checked> LTR
         </label>
@@ -231,8 +231,8 @@
     <main #main>
       <router-outlet></router-outlet>
     </main>
-    <footer class="bg-light text-center py-3 mt-4">
-      <p>This demo uses angular-archwizard version 6.0.0</p>
+    <footer class="bg-light text-center py-2 mt-4">
+      <p class="my-2">This demo uses angular-archwizard version 6.0.0</p>
 
       <form class="form mx-auto github text-center">
         <a class="github-button"
